# G4_Framework

./: .gitignore  CMakeLists.txt  G4_Framework.ioc  README.md  STM32G473XX_FLASH.ld
Core/Inc/: stm32g4xx_it.h  tim.h
Core/Src/: app_freertos.c  dma.c  fdcan.c  gpio.c  main.c  spi.c  stm32g4xx_it.c  tim.c  usart.c
User/Algorithm/Inc/: Chassis_Calc.h  Power_Ctrl.h  mahony_filter.h
User/Algorithm/Src/: Chassis_Calc.c  Power_Ctrl.c  QuaternionEKF.c  controller.c  mahony_filter.c
User/App/Inc/: Boomerang_Task.h  Chassis_Task.h  IMU_Task.h  Shoot_Task.h  Test_Task.h
User/App/Src/: All_Task.c  Boomerang_Task.c  Chassis_Task.c  IMU_Task.c  Shoot_Task.c  Test_Task.c
User/BSP/Inc/: BSP-FDCAN.h  BSP_SPI.h  TIM_PWM.h  WS2812.h
User/BSP/Src/: BSP_FDCAN.c  BSP_QSPI.c  TIM_PWM.c  WS2812.c
User/Device/Inc/: DBUS.h  DJI_Motor.h  DM_Motor.h  ICM42688P.h  LK_Motor.h  Power_CAP.h  Referee.h  VT13.h
User/Device/Src/: DBUS.c  DJI_Motor.c  DM_Motor.c  ICM42688P.c  LK_Motor.c  Power_CAP.c  Referee.c  VT13.c  W25N01GV.c
User/Middleware/Inc/: CAN_Comm.h  System_Status.h
User/Middleware/Src/: CAN_Comm.c  System_Status.c
User/UI/: RMUI.c  RMUI.h  RM_UI_Adapter.c  RM_UI_Adapter.h
User/UI/lib/: ui_g1.h
User/Utils/Inc/: All_Init.h  All_Motor.h  All_define.h
User/Utils/Src/: All_Init.c  CKQ_MATH.c  Vofa.c
